# KC_Practies

./: CMakeLists.txt  Dockerfile  app.py  docker-compose-bind.yml  docker-compose-volume.yml  docker-compose.yml  main.cpp
.github/workflows/: syntax-check.yml
api/: Dockerfile
app/: SimpleWpfApp.application  SimpleWpfApp.exe.manifest
calc-java/: Dockerfile
calc-py/: Dockerfile
controllers/: admincontroller.cpp  admincontroller.h  authcontroller.cpp  authcontroller.h  borrowingcontroller.cpp  borrowingcontroller.h  chatcontroller.cpp  chatcontroller.h  gamecontroller.cpp  gamecontroller.h  ratingcontroller.cpp  ratingcontroller.h  usercontroller.cpp  usercontroller.h  usergamecontroller.cpp  usergamecontroller.h
dart-calc/: Dockerfile
data/: notes.txt
frontend/: Dockerfile
game-java/: Dockerfile
models/: borrowing.cpp  borrowing.h  chatmessage.cpp  chatmessage.h  game.cpp  game.h  gamegenre.cpp  gamegenre.h  genre.cpp  genre.h  log.cpp  log.h  rating.cpp  rating.h  user.cpp  user.h  usergame.cpp  usergame.h
resources/: resources.qrc  styles.qss
resources/styles/: chat.qss
rpsgame-py/: Dockerfile
utils/: ConfigManager.h  config.ini  configmanager.cpp  databasemanager.cpp  databasemanager.h  logger.cpp  logger.h  utils.cpp  utils.h
views/: addgamewindow.cpp  addgamewindow.h  addgamewindow.ui  adminpanelwindow.cpp  adminpanelwindow.h  adminpanelwindow.ui  borrowingswindow.cpp  borrowingswindow.h  borrowingswindow.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  gamedetailswindow.cpp  gamedetailswindow.h  gamedetailswindow.ui  gameeditwindow.cpp  gameeditwindow.h  gameeditwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui
